@@ -1,4 +1,4 @@
-<chapter>
+<chapter id="tutorial">
 <title>Tutorial</title>
 <para>
 This chapter walks through how one might implement the
